# AutoPipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  wireframe_autopipeline.bmpr
backend/: config.py  main.py  pyproject.toml
backend/data/audio/: data_loaders.py  preprocess.py
backend/data/image/: data_loaders.py  preprocess.py
backend/data/text/: data_loaders.py  preprocess.py
backend/models/audio/: custom.py  pretrained.py
backend/models/image/: custom.py  pretrained.py
backend/models/text/: custom.py  pretrained.py
backend/tasks/: libs.py
backend/utils/: manage_env.py  trainer.py
frontend/auto_pipeline_web/: package-lock.json  package.json
frontend/auto_pipeline_web/src/: App.tsx
frontend/auto_pipeline_web/src/components/: Inference.tsx  Navbar.tsx  NewPipeline.tsx
notebooks/: test.ipynb
ui/: UI.py  requirements.txt
